--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,263 +1,285 @@
 /****************
-    Template
+     Fonts
 ****************/
 @font-face {
   font-family: "Avenir Black";
   src: url(../font/Avenir_Black.ttf); }
 @font-face {
+  font-family: "Avenir Medium";
+  src: url(../font/Avenir_Medium.ttf); }
+@font-face {
   font-family: "Avenir Light";
   src: url(../font/Avenir_Light.ttf); }
-.text-faded {
-  opacity: 0.65; }
+/****************
+     Colors
+****************/
+.text-blue, #header #header-code #header-code-property:hover {
+  color: #0b8fb2; }
 
-.text-grey, #description span, #about span, .legend td:nth-child(odd), .data td:nth-child(odd), #legend--subscribe tr td {
-  color: #b9b9b9; }
+.text-blue-dark, a:hover, a:visited:hover, a:active, a:visited:active, #header #header-code #header-code-property:active {
+  color: #235364; }
 
-.text-yellow, a, a:visited, #header #header-code #header-code-property, .field div.field-input-container input.field-input, .data td:nth-child(odd), footer .footer-text {
-  color: #d9f245; }
+.background-blue, #data #data_cols div a:hover {
+  background-color: #0b8fb2; }
 
-.text-blue, a:hover, a .accent, [data-query]:hover, [data-query] .accent, #header #header-code #header-code-property:hover, footer .footer-text--divider, #field--search-help:hover {
-  color: #5bb7ff; }
+.text-green, #body-bigCount {
+  color: #29bd66; }
 
-.text-blue-dark, a:active, [data-query]:active, #header #header-code #header-code-property:active {
-  color: #3874a3; }
+.background-green, [data-query]:hover, input:focus, input:hover, #query [data-query]:hover {
+  background-color: #29bd66; }
 
-.text-green, body #body-bigCount, .data td:nth-child(even) {
-  color: #90ffb2; }
-
-.text-green-dark, .field div.field-input-container input.field-input:focus {
-  color: #5aa074; }
+.text-grey, #data .accent, footer .footer-text--divider {
+  color: #5a5a5a; }
 
 .text-red {
-  color: #ff274d; }
+  color: #d51407; }
 
+.background-red {
+  background-color: #d51407; }
+
+/********************
+    Normalization
+********************/
 ::-webkit-scrollbar {
   display: none; }
 
+* {
+  box-sizing: border-box; }
+
+::selection {
+  background: #000;
+  color: #fff; }
+
+/*****************
+    Elements
+*****************/
+b {
+  font-weight: normal;
+  font-family: "Avenir Medium"; }
+
+strong {
+  font-weight: normal;
+  font-family: "Avenir Black"; }
+
+a, a:visited {
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none; }
+
+[data-query] {
+  display: inline-block;
+  transition: background-color 75ms;
+  cursor: pointer;
+  border-bottom: 1px dotted #2e2e2e; }
+
+input {
+  transition: background-color 400ms;
+  width: 14.35rem;
+  padding: 0.425rem 0.45rem 0.3rem 0.425rem;
+  border: 1px solid black;
+  border-radius: 1px;
+  font-family: "Avenir Medium";
+  color: #000;
+  font-size: 0.8rem;
+  word-spacing: -0.05rem; }
+  input:focus, input:hover {
+    outline: none; }
+
+/*****************
+      Body
+*****************/
 body {
   cursor: default;
   overflow: hidden;
-  background: radial-gradient(circle, #191f29, #050b18);
-  color: #f3f3f3;
-  text-align: center;
-  font-family: "Avenir Light";
-  font-size: 1rem; }
+  height: 100%;
+  border-top: 3px solid white;
+  background: #fff;
+  color: #000;
+  font-family: "Avenir Light"; }
   body main {
     position: absolute;
     left: 50%;
-    margin-left: -5.75rem;
-    width: 11.5rem; }
-  body #body-flare {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%; }
-  body #body-error {
-    z-index: -1;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    padding-top: 10vh;
-    background: #ff1718;
-    color: #091418;
-    text-align: center;
-    font-size: 80vh; }
-  body #body-bigCount {
+    margin-left: -15rem;
+    width: 32rem; }
+
+#body-bigError {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  font-family: "Verdana";
+  color: red;
+  font-size: 80vh;
+  text-align: center; }
+
+#body-bigCount {
+  position: absolute;
+  left: 50%;
+  bottom: -12vw;
+  transform: translateX(-50%);
+  font-size: 33vw; }
+  #body-bigCount:after {
+    content: "Site Count";
     position: absolute;
-    left: 50%;
-    bottom: -16vw;
-    transform: translateX(-50%);
-    font-size: 38vw;
-    letter-spacing: -1vw; }
-    body #body-bigCount:after {
-      content: "Site Count";
-      position: absolute;
-      top: 3.5vw;
-      right: 1.75vw;
-      text-transform: uppercase;
-      font-size: 1.05vw;
-      letter-spacing: 0.025vw; }
-
-a, a:visited {
-  text-decoration: none; }
-
-a, [data-query] {
-  display: inline-block;
-  cursor: pointer; }
-  a .accent, [data-query] .accent {
-    pointer-events: none; }
+    top: 3.5vw;
+    right: 1.75vw;
+    text-transform: uppercase;
+    font-size: 1.05vw;
+    letter-spacing: 0.025vw; }
 
 #header {
-  padding-top: 1.25rem;
+  margin: 0.45rem auto -0.25rem auto;
+  width: 30.25rem;
   font-family: "Avenir Black";
   text-transform: uppercase;
-  font-size: 2.4rem;
-  letter-spacing: 0.025rem; }
+  font-size: 2.825rem; }
   #header #header-code {
-    margin: 0rem auto -0.3rem auto;
+    position: relative;
+    top: 0.525rem;
+    right: -1.9rem;
     width: 11.65rem;
+    font-family: "Avenir Medium";
     text-align: right;
-    font-size: 0.45rem;
-    font-family: "Source Code Pro";
-    text-transform: none; }
+    font-size: 0.65rem;
+    text-transform: none;
+    letter-spacing: 0.03rem; }
     #header #header-code #header-code-property {
       display: inline-block;
       cursor: pointer; }
   #header #header-logo {
-    text-shadow: 0px 0px 0px rgba(225, 245, 225, 0.5); }
-    #header #header-logo o {
-      display: inline;
-      position: relative;
-      text-shadow: 0px 0px 0px rgba(55, 143, 254, 0.65); }
-      #header #header-logo o span {
-        left: 0.12rem;
-        bottom: 0.80rem;
-        position: absolute;
-        width: 1.4rem;
-        height: 1.4rem;
-        background: #f4f4f4;
-        border-radius: 1rem; }
-  #header #header-hr {
-    margin: -0.125rem auto 0rem auto;
-    height: 0.3rem;
-    width: 11.5rem;
-    background: #d9f245; }
+    text-shadow: 0px 0px 0px #7d7d7d; }
 
-#description, #about {
-  margin: 0.9rem 0rem 0.25rem 0rem;
-  letter-spacing: 0.035rem;
-  line-height: 1.15rem; }
+#slogan {
+  background: white;
+  font-size: 1rem;
+  line-height: 1.35rem;
+  letter-spacing: 0.015rem;
+  font-family: "Avenir Medium"; }
 
-#about {
-  margin-top: 1.05rem;
-  font-size: 0.9rem; }
+.sectionHeader {
+  margin: 1.3rem 0rem 0.65rem 0.05rem;
+  font-family: "Avenir Black";
+  font-size: 0.75rem;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase; }
 
-.field {
-  margin-top: 1.65rem; }
-  .field span.field-label {
-    display: inline-block;
-    position: relative;
-    margin-bottom: 0.5rem;
-    text-transform: uppercase;
-    font-size: 0.65rem;
-    letter-spacing: 0.075rem; }
-  .field div.field-input-container {
-    position: static;
-    width: 100%;
-    margin: 0 auto; }
-    .field div.field-input-container input.field-input {
-      opacity: 0.85;
-      background: transparent;
-      border: none;
-      letter-spacing: 0.03rem;
-      text-align: center;
-      font-size: 0.8rem; }
-      .field div.field-input-container input.field-input:focus {
-        outline: none;
-        color: #caf400; }
-      .field div.field-input-container input.field-input::selection {
-        background: #c0d230; }
-    .field div.field-input-container .field-input-symbols {
-      position: absolute;
-      left: 45%;
-      color: #e8ff92;
-      font-size: 0.90rem; }
-
-.legend, .data {
-  margin: 0.65rem auto 0rem auto;
-  opacity: 0.65;
-  font-family: "Source Code Pro";
+#query {
+  text-transform: uppercase;
   font-size: 0.625rem;
-  text-align: left;
-  line-height: 0.625rem; }
-  .legend td, .data td {
-    width: 100%;
-    white-space: nowrap; }
-    .legend td:nth-child(even), .data td:nth-child(even) {
-      text-align: right;
-      letter-spacing: 0.025rem; }
+  letter-spacing: 0.05rem; }
+  #query #query_or {
+    margin: 0rem 0.3rem; }
+  #query [data-query] {
+    margin-right: 0.115rem;
+    padding: 0.4rem 0.6rem 0.25rem 0.6rem;
+    background: black;
+    line-height: 1.1rem;
+    color: white;
+    font-family: "Avenir Black"; }
 
-.legend {
-  transition: opacity 135ms;
-  margin-bottom: 0.4rem; }
-  .legend:hover {
-    opacity: 1; }
+#search_ {
+  display: inline-block;
+  position: static;
+  margin-bottom: 0.125rem; }
+  #search_ #searchSymbols {
+    position: absolute;
+    margin-top: 0.2rem;
+    left: 6rem;
+    font-size: 1.10rem; }
 
-.data {
-  display: none;
-  overflow-y: scroll;
-  position: absolute;
-  max-height: 18.5rem;
-  line-height: 0.75rem; }
+#data {
+  position: relative;
+  margin-top: 1.175rem;
+  font-size: 0.8rem; }
 @-moz-document url-prefix() {
-  .data {
+  #data {
     /* This is to space out the Firefox scrollbar. */
     padding-right: 0.65rem; } }
-  .data .data-cols {
-    opacity: 0.725;
-    margin-bottom: 0.35rem;
+  #data #data_cols div {
+    position: absolute;
+    font-family: "Avenir Black";
     letter-spacing: 0.05rem;
-    font-family: "Avenir Light"; }
-
-.data_more td {
-  padding-top: 0.15rem;
-  color: white !important; }
-
-.dataScroll {
-  background: #191f29;
-  position: absolute;
-  bottom: -0.7rem;
-  right: -0.1rem;
-  color: rgba(255, 255, 255, 0.775);
-  font-size: 0.6rem;
-  letter-spacing: 0.05rem; }
+    text-transform: uppercase; }
+    #data #data_cols div:nth-child(even) {
+      right: 0; }
+    #data #data_cols div a {
+      display: inline-block;
+      position: relative;
+      top: -0.175rem;
+      left: 0.05rem;
+      padding: 0.2rem;
+      background: black;
+      color: white;
+      font-size: 7px; }
+  #data table {
+    margin-top: 1.65rem;
+    position: absolute;
+    display: block;
+    overflow-y: scroll;
+    clear: both;
+    max-height: 17rem;
+    line-height: 1.175rem;
+    font-family: "Avenir Medium"; }
+    #data table td {
+      width: 100%; }
+      #data table td:nth-child(odd) {
+        letter-spacing: 0.03rem; }
+      #data table td:nth-child(even) {
+        letter-spacing: 0.02rem;
+        text-align: right; }
+      #data table td [data-query] {
+        border: none; }
+    #data table #data_more td {
+      padding-top: 0.3rem;
+      font-family: "Avenir Black"; }
+      #data table #data_more td a {
+        border-bottom: 1px dotted black; }
+  #data .accent {
+    pointer-events: none; }
+  #data #data_scroll {
+    z-index: 1;
+    position: absolute;
+    left: 50%;
+    margin-left: -0.9rem;
+    top: 16rem;
+    color: #373737;
+    font-size: 1.8rem; }
 
 footer {
   position: fixed;
-  bottom: 0.5rem;
+  bottom: 0rem;
   left: 50%;
   transform: translateX(-50%);
-  color: #858585;
-  font-size: 9px;
-  line-height: 0.75rem; }
+  padding: 0.4rem 0rem 0.6rem 0rem;
+  width: 100%;
+  text-align: center;
+  font-family: "Avenir Black";
+  font-size: 0.6rem; }
+  footer img {
+    width: 100px;
+    margin-bottom: -0.2rem; }
+  footer #stripe {
+    position: relative;
+    margin-bottom: -0.3rem;
+    width: 38px; }
   footer .footer-text {
-    opacity: 0.475;
     text-transform: uppercase;
-    letter-spacing: 0.05rem;
+    letter-spacing: 0.015rem;
     word-spacing: -0.075rem; }
-  footer .footer-text--divider {
-    padding: 0rem 0.10rem; }
 
-/**************
-    Custom
-**************/
-#legend--search-charts {
-  opacity: 0.85;
-  margin-top: 0.05rem; }
-  #legend--search-charts td {
-    width: 10rem;
-    font-size: 0.75rem;
-    font-family: "Avenir Light";
-    color: #ddeb4c;
-    letter-spacing: 0.025rem; }
-    #legend--search-charts td:nth-child(odd) {
-      padding-right: 0.6rem;
-      text-align: right; }
-    #legend--search-charts td:nth-child(even) {
-      text-align: left; }
+#subscribe_ {
+  position: fixed !important;
+  top: 2rem;
+  right: 2.2rem;
+  background: black; }
+  #subscribe_ #subscribe {
+    width: 13.75rem; }
 
-#field--search-help {
-  position: absolute;
-  bottom: 0.05rem;
-  right: -1.9rem;
-  color: #b5b5b5;
-  font-size: 7px; }
-
-/*************
-    Start
-*************/
-main, #body-flare, #body-bigCount, #header-logo o span, .data_more, .dataScroll, #about, footer {
-  display: none; }
-
-#body-error, #header-code, #header-logo, #header-hr {
+/***************
+    Initial
+***************/
+#header-code, #header-logo, #subscribe {
   opacity: 0; }
+
+#body-bigError, #body-bigCount, main, .data_more, #data_scroll, footer, #subscribe_ {
+  display: none; }
